# tribeca-django-init

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  agents.md  cleanup.sh  pyproject.toml
.github/workflows/: ci.yml
docs/: mcps_documentation.md  unified_dev_ops_guide.md
init_django/: __init__.py  cli.py  cli_common.py  cli_mcp.py  cli_user.py
init_django/templates/: .env.example  agents.md.tpl  backlog.md  base.py.tpl  dev.py.tpl  readme.md.tpl  requirements.txt  settings_base.py.tpl  settings_dev.py.tpl  settings_prod.py.tpl
init_django/templates/docs/: api_documentation.md  architecture_blueprint.md  django_models_template.md
init_django/templates/settings/: prod.py.tpl
review/: README.md  _template.md  indexReview.md
scripts/: check_review_index.py  post_install.py
tests/: test_cli.py  test_cli_common.py
tribeca_django_init.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
